added another fold in the workshop page, but halfway

--- a/workshops.html
+++ b/workshops.html
@@ -109,6 +109,57 @@
         </div>
     </section>
 
+    <!-- Private Class -->
+    <section class="private-class purple-bg ">
+        <div class="container text-center">
+            <div class="row"><div style="height: 94px;"></div></div>
+            <div class="row">
+                <div class="col-xs-12"><img style="height: 95px; width: 95px;" src="assets/img/workshop-private-class.svg" alt=""></div>
+                <div class="col-xs-12"><p class="course-title white">PRIVATE CLASS</p></div>
+                <div class="col-xs-12"><p class="course-subtitle" style="color: #23C2F2">
+                    10  weeks, 3 hour sessions, approximately 8 - 10 hours adjustable according to <br
+                        class="hidden-xs"> your child's learning speed. The private class consist of:
+                </p></div>
+            </div>
+            <div class="row">
+
+                <div class="col-sm-6 col-xs-12">
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <div class="circle-text one">1x</div>
+                            <p class="one-text">Introductory Level<br>
+                                Workshop</p>
+                        </div>
+                        <div class="col-xs-6">
+                            <div class="circle-text two">2x</div>
+                            <p class="two-text">Beginner level<br/>
+                                workshops</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FEES -->
+                <div class="col-sm-6 col-xs-12">
+                    <div class="row">
+                        <div class="col-xs-12"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            <p>Per 3 hour lesson</p>
+                            <p>RM 247</p>
+                            <p>(paid each time)</p>
+                        </div>
+                        <div class="col-xs-12 col-sm-6">
+                            <p>10 x 3 hour lesson</p>
+                            <p>RM 2,190</p>
+                            <p>(paid upfront)</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Private Class -->
 
@@ -133,6 +184,7 @@
     </section>
 
     <div id="footer-container"></div>
+
     <script id="course-card-template" type="text/x-handlebars-template">
         {{#courses}}
             <div class="col-xs-12 col-sm-4">
@@ -153,7 +205,6 @@
             </div>
         {{/courses}}
     </script>
-
     <script>
         (function () {
             $('#navbar-container').load('assets/common/navbar.html');
